Continue changing page to screen in screen controller
Co-authored-by: Luigi Ray-Montanez <luigi@codeforamerica.org>